Fixed right alignment

--- a/02_ScienceMuseum/css/styles.css
+++ b/02_ScienceMuseum/css/styles.css
@@ -462,6 +462,9 @@ main {
     text-align: center;
     font-size: .8rem; }
 
+.hero-image {
+  width: 100%; }
+
 footer {
   background-color: black;
   color: white;
